fixed h2 not centered

--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -650,6 +650,10 @@ section {
         z-index: 3050;
         display:inline;
     }
+    
+    h2.section_form_text {
+        padding:0px;
+    }
 
     .contact-form {
         padding: 15px 15px;
